# thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: common.cmake
compute/include/: device.hpp  dynamic_array.hpp  error.hpp
compute/include/platform/: platform_ops.hpp  platform_property.hpp
compute/src/: device.cpp  platform.cpp
old/: CMakeLists.txt
old/asio_tcp_proxy/: CMakeLists.txt
old/asio_tcp_proxy/src/: main.cpp
old/cmake/: common.cmake
old/compute/: CMakeLists.txt
old/compute/include/: common.hpp  platform.hpp
old/compute/include/device/: device_ops.hpp  device_property.hpp
old/compute/src/: common.cpp  error.cpp
old/compute/src/device/: device_ops.cpp
old/core/: CMakeLists.txt
old/core/include/core/: common.hpp  data_type.hpp  definitions.hpp  scoped_ptr.hpp  type_manager.hpp
old/core/src/: main.cpp
old/k_way_merge_sort/: CMakeLists.txt
old/k_way_merge_sort/src/: main.cpp
old/render/: CMakeLists.txt
old/render/data/: frame0.avif  frame1.avif  frame2.avif
old/render/include/: common.hpp  error.hpp
old/render/shaders/compute/: axpy.glsl
old/render/shaders/compute/tiledLighting/: tile_compute_atomic.glsla  tile_compute_max_tile.glsl
old/render/shaders/fragment/: fragment.glsl
old/render/shaders/pbr/: fragment.glsl
old/render/shaders/vertex/: vertex.glsl
old/render/src/: error.cpp  helpers.hpp  main.cpp  test.cppx
old/render/src/render/vulkan/: common.hpp  definitions.hpp
old/thesis/: CMakeLists.txt
old/thesis/include/: TGMainWindow.hpp
old/thesis/src/: TGOpenGLRendererWidget.cpp
old/thesis/ui/: TGMainWindow.ui
render/: CMakeLists.txt
render/include/: common.hpp  error.hpp  layer.hpp  typedefs.hpp
render/src/: error.cpp  helpers.hpp  print.hpp  test.cpp
thesis/: CMakeLists.txt
thesis/include/: TGOpenGLRendererWidget.hpp
thesis/shaders/: fragment.glsl  vertex.glsl
thesis/src/: TGMainWindow.cpp  main.cpp
